--- a/app/assets/stylesheets/mobile/_header.sass
+++ b/app/assets/stylesheets/mobile/_header.sass
@@ -180,6 +180,9 @@
   text-overflow: ellipsis
   padding-left: 0px
 
+#header #page_title.pad
+  padding: 14px 0px 0px
+
 #header #page_title a
   padding: 14px 5px 8px 8px
   height: 15px
