--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -327,6 +327,81 @@ div.close_tab
 .tab_navigation.ref a
   width: 49.99%
 
+#main article .combo_button
+  width: 100%
+  position: absolute
+  left: 0px
+  top: -5px
+  display: block
+  height: 44px
+  background: #2C2B2B
+  margin: 0px
+  text-align: center
+  line-height: 43px
+  color: #fff
+  font-weight: bold
+  font-size: 15px
+  text-decoration: none
+  +box-shadow(inset #000000 0 1px 1px 0px)
+  //+box-shadow(inset #4b4b4b 0 2px 0 0, inset #0d0d0d 0 -2px 0 0)
+  border-bottom: 0px
+  
+#main article .combo_button dt
+  display: none
+
+#main article .combo_button dd
+  width: 49.99%
+  border: 0px
+  background: none
+  background-color: transparent
+  text-shadow: none
+  float: left
+  color: #fff
+
+#main article .combo_button dd:hover
+  background: none
+
+#main article .combo_button dd:first-child
+  border-left: 0
+
+#main article .combo_button dd.highlighted,
+#main article .combo_button dd.highlighted:hover
+  background: #666
+  border-radius: 0px
+  color: #fff !important
+  +box-shadow(inset #000000 0 1px 1px 1px)
+
+#main article .combo_button dd.highlighted a
+  padding-left: 0px
+  color: #fff !important
+
+#main article .combo_button dd.highlighted a:hover
+  color: #fff
+
+#main article .combo_button dd:hover a
+  color: #fff !important
+
+#main article .combo_button a
+  border: 0px
+  display: block
+  width: 100%
+  padding: 0 !important
+  height: auto
+  float: left
+  background: none !important
+  color: #fff
+  text-align: center
+
+#main article .combo_button .highlighted a
+  box-shadow: none
+
+
+#main article .combo_button dt:first-child + dd
+  border-radius: 0px
+
+#main article .combo_button + .big_list
+  margin-top: 50px
+
 .nav_items.audio-disabled
   width: 170px
 
@@ -478,7 +553,7 @@ div.close_tab
   .li_note
     background:
       image: image-url("big_list_note.png")
-      position: 0 21px
+      position: 0 0px
   .li_social
     background:
       image: image-url("big_list_social.png")
