--- a/app/assets/stylesheets/mobile/_modal_window.sass
+++ b/app/assets/stylesheets/mobile/_modal_window.sass
@@ -151,6 +151,23 @@
   +round-bottom
 #modal_window .tab_content_container span
   font-size: 10px
+
+#modal_single_verse #modal_window
+  width: 90%
+
+#modal_single_verse #modal_window section
+  margin-right: 0px
+  padding: 10px 0px
+
+#modal_single_verse #modal_window section .big
+  font-size: 18px
+  width: 50%
+  padding: 2% 5% 0%
+
+#modal_window .action_button_blue,
+#modal_window .action_button_green
+  margin-left: 12px
+
 #link_tab_content
   display: none
 
